# Agentic-Data-Pipeline-AI-Workflow---weather

./: .gitignore  README.md  SETUP.md  install-and-run.ps1  pyproject.toml
app/: main.py
app/src/: api_schemas.py  cities.py  config.py  data_cleaner.py  database.py  scheduler.py  weather_agent.py  weather_fetcher.py
sql_script/: database_setup.sql
