[project]
name = "agentic-data-pipeline-ai-workflow-weather"
version = "0.1.0"
description = "Automated weather data pipeline with OpenWeatherMap API and MySQL storage"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "mysql-connector-python>=8.2.0",
    "schedule>=1.2.0",
    "openai>=1.0.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "apscheduler>=3.10.4",
    "pydantic>=2.5.0"
]

